brat/test/golden/error/toplevel-leftovers3.brat
f(Nat, Bool) -> Nat
f(x) = x
