brat/test/golden/error/toplevel-leftovers3.brat.golden
Error in test/golden/error/toplevel-leftovers3.brat on line 2:
f(x) = x
  ^

  Type error: Inputs (b1 :: Bool) weren't used

